# X-Token

./: README.md  TokenExtractor.py  main.py  pyproject.toml  requirements.txt  requiremets.txt  token.txt
.github/workflows/: builds.yml  windows.yml
